--- a/Apps/Android/app/src/main/res/values/styles.xml
+++ b/Apps/Android/app/src/main/res/values/styles.xml
@@ -1,11 +1,37 @@
 <resources>
-
-    <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="AppTheme.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="AppTheme.NoActionBar.Drawer" />
+
+    <style name="NavigationHeader" parent="ThemeOverlay.AppCompat.Dark">
+        <item name="android:background">@color/colorAccent</item>
+    </style>
+
+    <style name="EditTextHint" parent="TextAppearance.AppCompat">
+        <item name="colorAccent">@android:color/white</item>
+        <item name="android:textColorHint">@color/tertiaryWhite</item>
+        <item name="colorControlNormal">@color/primaryWhite</item>
+        <item name="colorControlActivated">@color/primaryWhite</item>
+        <item name="colorControlHighlight">@color/primaryWhite</item>
+    </style>
+
+    <style name="Divider">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">1dp</item>
+        <item name="android:background">?android:attr/listDivider</item>
+    </style>
+
+    <style name="ColorButton">
+        <item name="android:background">@color/colorAccent</item>
+        <item name="android:textColor">@color/primaryWhite</item>
+    </style>
 </resources>
