Activities have BaseActivity super class, created activity package

--- a/Apps/Android/app/src/main/res/layout/activity_main.xml
+++ b/Apps/Android/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="whirlwind.com.school1.MainActivity">
+    tools:context="whirlwind.com.school1.activity.MainActivity">
 
 </RelativeLayout>
